# python-interview-prep

./: .gitignore  Makefile  README.md  STUDY_GUIDE.md  TIME_ESTIMATES.md  YOUR_TIMES.template.md  pyproject.toml
.github/workflows/: tests.yml
exercises/01_basic_functions/: README.md  shopping_cart.py  test_shopping_cart.py
exercises/02_string_processing/: README.md  test_text_formatter.py  text_formatter.py
exercises/03_class_basics/: README.md  bank_account.py  test_bank_account.py
exercises/04_inheritance_bugs/: README.md  shapes.py  test_shapes.py
exercises/05_test_interpretation/: README.md  test_user_validator.py  user_validator.py
exercises/06_mutable_default_args/: README.md  event_logger.py  test_event_logger.py
exercises/07_exception_handling/: README.md  config_parser.py  test_config_parser.py
exercises/08_iteration_mutation/: README.md  task_manager.py  test_task_manager.py
exercises/09_external_api_client/: README.md  test_weather_client.py  weather_client.py
exercises/10_race_and_timing/: README.md  cache_with_expiry.py  test_cache_with_expiry.py
exercises/11_file_processing/: README.md  csv_report.py  test_csv_report.py
exercises/12_refactoring_for_testability/: README.md  notification_service.py  test_notification_service.py
exercises/13_type_hint_bugs/: README.md  grade_processor.py  test_grade_processor.py
exercises/14_add_type_hints/: README.md  task_registry.py  test_task_registry.py
exercises/15_write_mocks/: README.md  payment_processor.py  test_payment_processor.py
exercises/16_fix_test_mocks/: README.md  inventory_service.py  test_inventory_service.py
exercises/17_property_and_composition/: README.md  temp_monitor.py  test_temp_monitor.py
exercises/18_write_tests_basic/: README.md  string_calculator.py  test_string_calculator.py
exercises/19_write_tests_mocking/: README.md  order_service.py  test_order_service.py
exercises/20_black_box_wrapper/: README.md  quirky_encoder.py  safe_encoder.py  test_safe_encoder.py
exercises/20_data_pipeline/: README.md  pipeline.py
exercises/21_library_catalog/: README.md  catalog.py  test_catalog.py
exercises/21_observability_logging/: README.md  data_processor.py  test_data_processor.py
exercises/22_statistics_module/: README.md  stats.py  test_stats.py
exercises/22_systems_integration/: README.md  service_client.py  test_service_client.py
exercises/23_dataclass_refactor/: README.md  test_user_profile.py  user_profile.py
exercises/23_log_analyzer/: README.md  log_analyzer.py
exercises/24_money_and_decimal/: README.md  invoice.py  test_invoice.py
exercises/24_rate_limited_client/: README.md  api_client.py  test_api_client.py
exercises/25_enum_state_machine/: README.md  order_state.py  test_order_state.py
exercises/25_receipt_printer_refactor/: README.md  receipt_printer.py  test_receipt_printer.py
exercises/26_config_schema_validator/: README.md  test_validator.py  validator.py
guides/: 01_functions_and_scope.py  02_classes_and_oop.py  03_unittest_fundamentals.py  04_debugging_strategies.py  05_mocking_and_external_deps.py  06_clean_code_principles.py  07_type_hinting.py  08_observability_and_systems.py  09_modern_data_types.py  10_paths_and_matching.py  11_context_and_decorators.py  12_async_and_testing.py
solutions/: 01_solution.md  02_solution.md  03_solution.md  04_solution.md  05_solution.md  06_solution.md  07_solution.md  08_solution.md  09_solution.md  10_solution.md  11_solution.md  12_solution.md  13_solution.md  14_solution.md  15_solution.md  16_solution.md  17_solution.md  18_solution.md  19_solution.md  20_solution.md  21_solution.md  22_solution.md  23_solution.md  24_solution.md  25_solution.md  26_solution.md  27_solution.md  28_solution.md  29_solution.md  30_solution.md  31_solution.md
(+19 files in other folders)
